<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/log_in_form_username"/>

    <EditText android:id="@+id/username_textfield"
              android:inputType="text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/log_in_form_password"/>

    <EditText android:id="@+id/password_textfield"
              android:inputType="text|textWebPassword"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <View android:layout_width="match_parent"
          android:layout_height="5px"
          android:background="@android:color/darker_gray" />

    <Button android:id="@+id/submit_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_form_button_label"/>

    <Button android:id="@+id/log_in_form_set_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_form_set_preference"/>
</LinearLayout>

