<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/preference_server_ip"/>

    <EditText android:id="@+id/server_ip_textfield"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/preference_server_port"/>

    <EditText android:id="@+id/server_port_textfield"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <Button android:id="@+id/preference_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preference_save_button_label"/>

</LinearLayout>